--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -8,35 +8,43 @@
 		<link rel="stylesheet" href="styles.css">
 		<div class = "chat">
 			<div class = "friendInfo">
-				<img class = "friendPhoto" src="friendPhoto.jpeg" alt = "friend photo" height = 20%, width = 20%>
-				<text class = "status"> Online </text>
+				<img src="friendPhoto.jpeg" alt = "friend photo">
+				<span> Anton is online now! </span>
 			</div>
 			<div class = "panel">
-				<text class = "label"> Contacts </text>
-				<select class = "usersList">
-					<option selected value = "Anton">  Anton </option>
-					<option> Alex </option>
-				</select>
+				<span> Contacts </span>
+				<div>
+					<select size = 5 >
+						<option selected value = "Anton">  Anton </option>
+						<option> Alex </option>
+					</select>
+				</div>
 				<form>
 					<button class = "button"> Settings </button>
 					<button class = "button"> Log out </button>
 				</form>
+				<img src = "userPhoto.jpeg" alt = "Profile photo">
 			</div>
 			<div class = "messageArea">
-				<div class = "friendtMessage">
-					<span class = "friendName"> Anton:&nbsp </span>
-					<p> Hello! </p>
+				<div class = "friendMessage">
+					<span class = "friendName"> Anton:&nbsp  </span> Hello!
 				</div>
 				<div class = "userMessage">
-					<span class = "userName"> Darya:&nbsp  </span>
-					<p> Hi, dude! </p>
-					<img class = "icon" src="delete.jpeg" alt = "Delete message">
-					<img class = "icon" src="edit.jpeg" alt = "Edit message">
+					<div>  <span class = "userName"> Darya:&nbsp  </span> Hi, dude! </div>	
+					<img class = "iconD" src="delete.png" alt = "Delete message">
+					<img class = "iconE" src="edit.png" alt = "Edit message">
+				</div>
+				<div class = "friendMessage">
+					<span class = "friendName"> Anton:&nbsp  </span> How are you?
+				</div>
+				<div class = "userMessage">
+					<div>  <span class = "userName"> Darya:&nbsp  </span> Fine, and you? </div>	
+					<img class = "iconD" src="delete.png" alt = "Delete message">
+					<img class = "iconE" src="edit.png" alt = "Edit message">
 				</div>
 			</div>
 			<div class = "userArea">
-				<img class = "userPhoto" src = "userPhoto.jpeg" alt = "Profile photo" height = 20%, width = 20%>
-				<textarea> Enter your message here </textarea>
+				<textarea> Type your message here </textarea>
 				<button class = "button"> Send </button>
 			</div>
 		</div>
