--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<link rel="stylesheet" href="styles.css">
+		<img class = "chatty" src="chatty.png" alt = "<3 Chatty">
 		<div class = "chat">
 			<div class = "friendInfo">
 				<img src="friendPhoto.jpeg" alt = "friend photo">
