--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -3,8 +3,9 @@
 	<head lang = "en">
 		<meta charset="utf-8">
 		<title> <3 Chatty </title>
+		<script src="scripts.js"></script>
 	</head>
-	<body>
+	<body onload = run()>	
 		<link rel="stylesheet" href="styles.css">
 		<img class = "chatty" src="chatty.png" alt = "<3 Chatty">
 		<div class = "chat">
@@ -32,21 +33,21 @@
 				</div>
 				<div class = "userMessage">
 					<div>  <span class = "userName"> Darya:&nbsp  </span> Hi, dude! </div>	
-					<img class = "iconD" src="delete.png" alt = "Delete message">
-					<img class = "iconE" src="edit.png" alt = "Edit message">
+					<img class = "iconDelete" src="delete.png" alt = "Delete message">
+					<img class = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
 				<div class = "friendMessage">
 					<span class = "friendName"> Anton:&nbsp  </span> How are you?
 				</div>
 				<div class = "userMessage">
 					<div>  <span class = "userName"> Darya:&nbsp  </span> Fine, and you? </div>	
-					<img class = "iconD" src="delete.png" alt = "Delete message">
-					<img class = "iconE" src="edit.png" alt = "Edit message">
+					<img class = "iconDelete" src="delete.png" alt = "Delete message">
+					<img class = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
 			</div>
 			<div class = "userArea">
-				<textarea> Type your message here </textarea>
-				<button class = "button"> Send </button>
+				<textarea id = "text"> Type your message here </textarea>
+				<button class = "button" onclick = onSendButtonClick()> Send </button>
 			</div>
 		</div>
 	</body>
