--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -7,25 +7,13 @@
 	</head>
 	<body onload = run()>	
 		<link rel="stylesheet" href="styles.css">
-		<img class = "chatty" src="chatty.png" alt = "<3 Chatty">
+		<img id = "chatty" src="chatty.png" alt = "<3 Chatty">
+		<span id = "serverIn">Server is availible!</span>
 		<div class = "chat">
-			<div class = "friendInfo">
-				<img src="friendPhoto.jpeg" alt = "friend photo">
-				<span> Anton is online now! </span>
-			</div>
 			<div class = "panel">
-				<span> Contacts </span>
-				<div>
-					<select size = 5 >
-						<option selected value = "Anton">  Anton </option>
-						<option> Alex </option>
-					</select>
-				</div>
-				<form>
-					<button class = "button"> Settings </button>
-					<button class = "button"> Log out </button>
-				</form>
-				<img src = "userPhoto.jpeg" alt = "Profile photo">
+					<textarea disabled id = "name">Your name</textarea>
+					<input type = "text" id = "enterName"></input>
+					<button class = "button" id = "change">Enter name</button>
 			</div>
 			<div class = "messageArea">
 				<div class = "friendMessage">
@@ -33,21 +21,21 @@
 				</div>
 				<div class = "userMessage">
 					<div>  <span class = "userName"> Darya:&nbsp  </span> Hi, dude! </div>	
-					<img class = "iconDelete" src="delete.png" alt = "Delete message">
-					<img class = "iconEdit" src="edit.png" alt = "Edit message">
+					<img id = "iconDelete" src="delete.png" alt = "Delete message">
+					<img id = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
 				<div class = "friendMessage">
 					<span class = "friendName"> Anton:&nbsp  </span> How are you?
 				</div>
 				<div class = "userMessage">
 					<div>  <span class = "userName"> Darya:&nbsp  </span> Fine, and you? </div>	
-					<img class = "iconDelete" src="delete.png" alt = "Delete message">
-					<img class = "iconEdit" src="edit.png" alt = "Edit message">
+					<img id = "iconDelete" src="delete.png" alt = "Delete message">
+					<img id = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
 			</div>
 			<div class = "userArea">
-				<textarea id = "text"> Type your message here </textarea>
-				<button class = "button" onclick = onSendButtonClick()> Send </button>
+				<textarea id = "text" placeholder = "Type your message here"></textarea>
+				<button class = "button" id = "sendB"> Send </button>
 			</div>
 		</div>
 	</body>
