--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -17,18 +17,18 @@
 			</div>
 			<div class = "messageArea">
 				<div class = "friendMessage">
-					<span class = "friendName">Anton:&nbsp </span>  <span>Hello!</span>
+					<span class = "friendName"> Anton:&nbsp </span> <span>Hello!</span>
 				</div>
 				<div class = "userMessage">
-					<div>  <span class = "userName">Darya:&nbsp</span> <span>Hi, dude!</span> </div>	
+					<div>  <span class = "userName"> Darya:&nbsp </span> <span>Hi, dude!</span> </div>	
 					<img id = "iconDelete" src="delete.png" alt = "Delete message">
 					<img id = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
 				<div class = "friendMessage">
-					<span class = "friendName">Anton:&nbsp</span> <span>How are you?</span>
+					<span class = "friendName"> Anton:&nbsp </span> <span>How are you?</span>
 				</div>
 				<div class = "userMessage">
-					<div>  <span class = "userName">Darya:&nbsp</span> <span>Fine, and you?<span> </div>	
+					<div>  <span class = "userName"> Darya:&nbsp </span> <span>Fine, and you?</span> </div>	
 					<img id = "iconDelete" src="delete.png" alt = "Delete message">
 					<img id = "iconEdit" src="edit.png" alt = "Edit message">
 				</div>
