--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -3,11 +3,11 @@
 	<head lang = "en">
 		<meta charset="utf-8">
 		<title> <3 Chatty </title>
-		<script src="scripts.js"></script>
+		<script src="js/scripts.js"></script>
 	</head>
 	<body onload = run()>	
-		<link rel="stylesheet" href="styles.css">
-		<img id = "chattyImg" src="chatty.png" alt = "<3 Chatty">
+		<link rel="stylesheet" href="css/styles.css">
+		<img id = "chattyImg" src="images/chatty.png" alt = "<3 Chatty">
 		<span id = "serverOn">Server is availible!</span>
 		<div class = "chat">
 			<div class = "panel">
