--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -3,6 +3,7 @@
 	<head lang = "en">
 		<meta charset="utf-8">
 		<title> <3 Chatty </title>
+		<script src="js/jquery-1.10.2.js"></script>
 		<script src="js/scripts.js"></script>
 	</head>
 	<body onload = run()>	
