--- a/Chat/mainPage.html
+++ b/Chat/mainPage.html
@@ -12,7 +12,7 @@
 		<span id = "serverOn">Server is availible!</span>
 		<div class = "chat">
 			<div class = "panel">
-					<textarea disabled id = "name">Your name</textarea>
+					<textarea disabled id = "name"></textarea>
 					<input type = "text" id = "enterName"></input>
 					<button class = "button" id = "changeNameBtn">Enter name</button>
 			</div>
